# fsaifork

./: .bashrc  .gitignore  .gitmodules  README.md  bashrc
fsai_ros2_ws/: RVIZ_PROFILES.md  Start_RViz.sh
fsai_ros2_ws/.claude/skills/fsai-architecture/: SKILL.md
fsai_ros2_ws/.claude/skills/fsai-codebase-index/: SKILL.md
fsai_ros2_ws/src/auto_nav/: package.xml  setup.py
fsai_ros2_ws/src/auto_nav/auto_nav/: adaptive_pursuit.py  array_map.py  ilqr.py  lqr.py  mpc.py  object_list_global_planner.py  pure_pursuit.py  simple_follower.py  stanley.py  teleop_node.py
fsai_ros2_ws/src/auto_nav/auto_nav/docs/: README.md  adaptive_pursuit.md  array_map.md  ilqr.md  lqr.md  mpc.md  pure_pursuit.md  simple_follower.md  stanley.md
fsai_ros2_ws/src/fsai_interfaces/: CMakeLists.txt  README.md  package.xml
fsai_ros2_ws/src/fsai_interfaces/msg/: Cone3D.msg  Cone3DArray.msg  VehicleControl.msg
fsai_ros2_ws/src/fsai_perception/: package.xml  setup.cfg  setup.py  usage.md
fsai_ros2_ws/src/fsai_perception/config/: camera_intrinsics_carmaker.npz  camera_intrinsics_video.npz  camera_mounting.yaml  camera_mounting_carmaker.yaml  carmaker.rviz  extrinsics.yaml  extrinsics_carmaker.yaml
fsai_ros2_ws/src/fsai_perception/fsai_perception/: cone_visualizer.py
fsai_ros2_ws/src/fsai_perception/launch/: perception.launch.py
fsai_ros2_ws/src/rviz_config/: carmaker_perception.rviz  sensors.rviz
fsai_ros2_ws/src/sim_packages/cmrosutils/: COLCON_IGNORE
fsai_ros2_ws/src/teleop_keyboard/: package.xml  setup.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
(+36 files in other folders)
