<?xml version="1.0"?>
<package format="3">
  <name>auto_nav</name>
  <version>1.0.0</version>
  <description>Simple autonomous navigation using ObjectList ground truth</description>
  <maintainer email="fsai@example.com">FSAI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vehiclecontrol_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
